--- a/src/App.css
+++ b/src/App.css
@@ -185,13 +185,16 @@ audio::-webkit-media-controls-toggle-closed-captions-button {
 h3 {
   font-size: 45px;
   padding: 15px 0;
+  color: rgb(143, 93, 146);
 }
 .meaningsDef {
   font-size: 23px;
+  color: rgb(31, 70, 72);
 }
 .examples {
   opacity: 0.7;
   font-size: 22px;
+  font-family: "Times New Roman", Times, serif;
 }
 @media (max-width: 420px) {
   form {
